objects/BU_Plan_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BU_Plan_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Plan_Approval_ID__c</fullName>
        <formula>Business_Unit_Plan__r.Name &amp;&quot;-&quot;&amp;TRIM(LEFT(Text( CreatedDate),16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Plan Approval ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Plan_Owner__c</fullName>
        <formula>Business_Unit_Plan__r.Owner__r.FirstName&amp;&quot; &quot;&amp; Business_Unit_Plan__r.Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Plan Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Plan__c</fullName>
        <label>Business Unit Plan</label>
        <referenceTo>Business_Unit_Plan__c</referenceTo>
        <relationshipLabel>BU Plan Approvals</relationshipLabel>
        <relationshipName>BU_Plan_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>BU Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted – Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BU Plan Approval</label>
    <nameField>
        <displayFormat>BU Plan Approval-{000}</displayFormat>
        <label>BU Plan Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BU Plan Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>